Grammar.output
Terminals unused in grammar

   HIGH_PRIORITY
   PARTITION
   WINDOW
   FOR
   ID
   CONCAT
   FLOOR


状态 118conflicts: 1 reduce/reduce
状态 178conflicts: 1 reduce/reduce
状态 179conflicts: 1 reduce/reduce
状态 180conflicts: 1 reduce/reduce


语法

    0 $accept: SQLS $end

    1 SQLS: SQL ';'
    2     | SQLS SQL ';'

    3 SQL: %empty
    4    | insert_exp
    5    | update_exp
    6    | create_exp
    7    | select_exp

    8 select_exp: select_expr_stmt
    9           | select_exp UNION select_expr_stmt
   10           | select_exp UNION ALL select_expr_stmt

   11 select_expr_stmt: SELECT select_opts select_expr_list end
   12                 | SELECT select_opts select_expr_list FROM table_references opt_where opt_group_by opt_having opt_order_by opt_limit opt_into_list end

   13 end: %empty

   14 select_opts: %empty
   15            | select_opts ALL
   16            | select_opts DISTINCT
   17            | select_opts DISTINCTROW
   18            | select_opts STRAIGHT_JOIN
   19            | select_opts SQL_SMALL_RESULT
   20            | select_opts SQL_BIG_RESULT
   21            | select_opts SQL_BUFFER_RESULT
   22            | select_opts SQL_NO_CHACHE
   23            | select_opts SQL_CALC_FOUND_ROWS

   24 select_expr_list: select_expr
   25                 | select_expr_list ',' select_expr
   26                 | '*'

   27 select_expr: where_condition opt_as_alias

   28 opt_as_alias: AS NAME
   29             | NAME
   30             | %empty

   31 case_when_fun: when_then
   32              | case_when_fun when_then

   33 when_then: WHEN where_condition THEN where_condition
   34          | ELSE where_condition

   35 table_references: table_reference
   36                 | table_references ',' table_reference

   37 table_reference: table_factor
   38                | join_table

   39 table_factor: NAME opt_as_alias index_hint
   40             | NAME '.' NAME opt_as_alias index_hint
   41             | table_subquery opt_as_alias
   42             | '(' table_references ')'
   43             | '(' where_condition ')' opt_as_alias index_hint

   44 table_subquery: '(' select_exp ')'

   45 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
   46           | table_reference STRAIGHT_JOIN table_factor
   47           | table_reference STRAIGHT_JOIN table_factor ON where_condition
   48           | table_reference left_or_right opt_outer JOIN table_factor join_condition
   49           | table_reference NATURAL opt_left_or_right JOIN table_factor

   50 opt_left_or_right: LEFT opt_outer
   51                  | RIGHT opt_outer
   52                  | %empty

   53 left_or_right: LEFT
   54              | RIGHT

   55 opt_outer: %empty
   56          | OUTER

   57 opt_inner_cross: %empty
   58                | INNER
   59                | CROSS

   60 opt_join_condition: %empty
   61                   | join_condition

   62 join_condition: ON where_condition
   63               | USING

   64 index_hint: %empty

   65 opt_where: %empty
   66          | WHERE where_condition

   67 where_condition: where_condition EQ where_condition
   68                | where_condition AND where_condition
   69                | where_condition OR where_condition
   70                | where_condition '-' where_condition
   71                | where_condition '+' where_condition
   72                | where_condition '*' where_condition
   73                | where_condition '/' where_condition
   74                | where_condition IN '(' select_exp ')'
   75                | where_condition NOT IN '(' select_exp ')'
   76                | where_condition IN '(' val_list ')'
   77                | where_condition NOT IN '(' val_list ')'
   78                | '(' where_condition ')'
   79                | EXISTS '(' select_exp ')'
   80                | NAME
   81                | NAME '.' '*'
   82                | NUM
   83                | NAME '.' NAME
   84                | CASE case_when_fun END
   85                | where_condition LIKE NAME
   86                | where_condition NOT LIKE NAME
   87                | '(' select_exp ')'
   88                | SYSTEM_CALL_VARIABLE
   89                | USER_CALL_VARIABLE
   90                | NAME '(' val_list ')'

   91 val_list: where_condition
   92         | val_list ',' where_condition
   93         | '*'

   94 opt_group_by: %empty
   95             | GROUP BY groupby_list opt_with_rollup

   96 groupby_list: where_condition opt_asc_desc
   97             | groupby_list ',' where_condition opt_asc_desc

   98 opt_asc_desc: %empty
   99             | ASC
  100             | DESC

  101 opt_with_rollup: %empty
  102                | WITH ROLLUP

  103 opt_having: %empty
  104           | HAVING where_condition

  105 opt_order_by: %empty
  106             | ORDER BY groupby_list

  107 opt_limit: %empty
  108          | LIMIT NUM
  109          | LIMIT NUM ',' NUM

  110 opt_into_list: %empty
  111              | INTO column_list

  112 column_list: NAME
  113            | column_list ',' NAME

  114 create_exp: CREATE DATABASE NAME

  115 update_exp: UPDATE NAME SET NAME EQ NAME WHERE NAME EQ NAME

  116 insert_exp: INSERT INTO NAME '(' key_value_exp ')' VALUES '(' value_key_exp ')'
  117           | INSERT INTO NAME VALUES '(' value_key_exp ')'

  118 key_value_exp: NAME
  119              | id_comma_exp NAME

  120 id_comma_exp: NAME ','
  121             | id_comma_exp NAME ','

  122 value_key_exp: NAME
  123              | id2_comma_exp NAME

  124 id2_comma_exp: NAME ','
  125              | id2_comma_exp NAME ','


Terminals, with rules where they appear

$end (0) 0
'(' (40) 42 43 44 74 75 76 77 78 79 87 90 116 117
')' (41) 42 43 44 74 75 76 77 78 79 87 90 116 117
'*' (42) 26 72 81 93
'+' (43) 71
',' (44) 25 36 92 97 109 113 120 121 124 125
'-' (45) 70
'.' (46) 40 81 83
'/' (47) 73
';' (59) 1 2
error (256)
EQ (258) 67 115
AND (259) 68
OR (260) 69
IN (261) 74 75 76 77
NOT (262) 75 77 86
LIKE (263) 85 86
ALL (264) 10 15
DISTINCT (265) 16
DISTINCTROW (266) 17
STRAIGHT_JOIN (267) 18 46 47
SQL_NO_CHACHE (268) 22
SQL_CALC_FOUND_ROWS (269) 23
SQL_SMALL_RESULT (270) 19
SQL_BIG_RESULT (271) 20
SQL_BUFFER_RESULT (272) 21
SYSTEM_CALL_VARIABLE (273) 88
USER_CALL_VARIABLE (274) 89
SELECT (275) 11 12
HIGH_PRIORITY (276)
FROM (277) 12
PARTITION (278)
WHERE (279) 66 115
GROUP (280) 95
BY (281) 95 106
HAVING (282) 104
WINDOW (283)
ORDER (284) 106
LIMIT (285) 108 109
FOR (286)
JOIN (287) 45 48 49
INNER (288) 58
CROSS (289) 59
ON (290) 47 62
USING (291) 63
LEFT (292) 50 53
RIGHT (293) 51 54
OUTER (294) 56
NATURAL (295) 49
EXISTS (296) 79
UNION (297) 9 10
INSERT (298) 116 117
UPDATE (299) 115
CREATE (300) 114
ID (301)
SET (302) 115
VALUES (303) 116 117
DATABASE (304) 114
AS (305) 28
NAME (306) 28 29 39 40 80 81 83 85 86 90 112 113 114 115 116 117 118
    119 120 121 122 123 124 125
ASC (307) 99
DESC (308) 100
INTO (309) 111 116 117
NUM (310) 82 108 109
WITH (311) 102
ROLLUP (312) 102
CONCAT (313)
CASE (314) 84
THEN (315) 33
WHEN (316) 33
END (317) 84
ELSE (318) 34
FLOOR (319)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
SQLS (75)
    on left: 1 2, on right: 0 2
SQL (76)
    on left: 3 4 5 6 7, on right: 1 2
select_exp (77)
    on left: 8 9 10, on right: 7 9 10 44 74 75 79 87
select_expr_stmt (78)
    on left: 11 12, on right: 8 9 10
end (79)
    on left: 13, on right: 11 12
select_opts (80)
    on left: 14 15 16 17 18 19 20 21 22 23, on right: 11 12 15 16 17
    18 19 20 21 22 23
select_expr_list (81)
    on left: 24 25 26, on right: 11 12 25
select_expr (82)
    on left: 27, on right: 24 25
opt_as_alias (83)
    on left: 28 29 30, on right: 27 39 40 41 43
case_when_fun (84)
    on left: 31 32, on right: 32 84
when_then (85)
    on left: 33 34, on right: 31 32
table_references (86)
    on left: 35 36, on right: 12 36 42
table_reference (87)
    on left: 37 38, on right: 35 36 45 46 47 48 49
table_factor (88)
    on left: 39 40 41 42 43, on right: 37 45 46 47 48 49
table_subquery (89)
    on left: 44, on right: 41
join_table (90)
    on left: 45 46 47 48 49, on right: 38
opt_left_or_right (91)
    on left: 50 51 52, on right: 49
left_or_right (92)
    on left: 53 54, on right: 48
opt_outer (93)
    on left: 55 56, on right: 48 50 51
opt_inner_cross (94)
    on left: 57 58 59, on right: 45
opt_join_condition (95)
    on left: 60 61, on right: 45
join_condition (96)
    on left: 62 63, on right: 48 61
index_hint (97)
    on left: 64, on right: 39 40 43
opt_where (98)
    on left: 65 66, on right: 12
where_condition (99)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 89 90, on right: 27 33 34 43 47 62 66 67 68 69 70 71
    72 73 74 75 76 77 78 85 86 91 92 96 97 104
val_list (100)
    on left: 91 92 93, on right: 76 77 90 92
opt_group_by (101)
    on left: 94 95, on right: 12
groupby_list (102)
    on left: 96 97, on right: 95 97 106
opt_asc_desc (103)
    on left: 98 99 100, on right: 96 97
opt_with_rollup (104)
    on left: 101 102, on right: 95
opt_having (105)
    on left: 103 104, on right: 12
opt_order_by (106)
    on left: 105 106, on right: 12
opt_limit (107)
    on left: 107 108 109, on right: 12
opt_into_list (108)
    on left: 110 111, on right: 12
column_list (109)
    on left: 112 113, on right: 111 113
create_exp (110)
    on left: 114, on right: 6
update_exp (111)
    on left: 115, on right: 5
insert_exp (112)
    on left: 116 117, on right: 4
key_value_exp (113)
    on left: 118 119, on right: 116
id_comma_exp (114)
    on left: 120 121, on right: 119 121
value_key_exp (115)
    on left: 122 123, on right: 116 117
id2_comma_exp (116)
    on left: 124 125, on right: 123 125


State 0

    0 $accept: . SQLS $end

    SELECT  shift, and go to state 1
    INSERT  shift, and go to state 2
    UPDATE  shift, and go to state 3
    CREATE  shift, and go to state 4

    $default  reduce using rule 3 (SQL)

    SQLS              转到状态 5
    SQL               转到状态 6
    select_exp        转到状态 7
    select_expr_stmt  转到状态 8
    create_exp        转到状态 9
    update_exp        转到状态 10
    insert_exp        转到状态 11


State 1

   11 select_expr_stmt: SELECT . select_opts select_expr_list end
   12                 | SELECT . select_opts select_expr_list FROM table_references opt_where opt_group_by opt_having opt_order_by opt_limit opt_into_list end

    $default  reduce using rule 14 (select_opts)

    select_opts  转到状态 12


State 2

  116 insert_exp: INSERT . INTO NAME '(' key_value_exp ')' VALUES '(' value_key_exp ')'
  117           | INSERT . INTO NAME VALUES '(' value_key_exp ')'

    INTO  shift, and go to state 13


State 3

  115 update_exp: UPDATE . NAME SET NAME EQ NAME WHERE NAME EQ NAME

    NAME  shift, and go to state 14


State 4

  114 create_exp: CREATE . DATABASE NAME

    DATABASE  shift, and go to state 15


State 5

    0 $accept: SQLS . $end
    2 SQLS: SQLS . SQL ';'

    $end    shift, and go to state 16
    SELECT  shift, and go to state 1
    INSERT  shift, and go to state 2
    UPDATE  shift, and go to state 3
    CREATE  shift, and go to state 4

    $default  reduce using rule 3 (SQL)

    SQL               转到状态 17
    select_exp        转到状态 7
    select_expr_stmt  转到状态 8
    create_exp        转到状态 9
    update_exp        转到状态 10
    insert_exp        转到状态 11


State 6

    1 SQLS: SQL . ';'

    ';'  shift, and go to state 18


State 7

    7 SQL: select_exp .
    9 select_exp: select_exp . UNION select_expr_stmt
   10           | select_exp . UNION ALL select_expr_stmt

    UNION  shift, and go to state 19

    $default  reduce using rule 7 (SQL)


State 8

    8 select_exp: select_expr_stmt .

    $default  reduce using rule 8 (select_exp)


State 9

    6 SQL: create_exp .

    $default  reduce using rule 6 (SQL)


State 10

    5 SQL: update_exp .

    $default  reduce using rule 5 (SQL)


State 11

    4 SQL: insert_exp .

    $default  reduce using rule 4 (SQL)


State 12

   11 select_expr_stmt: SELECT select_opts . select_expr_list end
   12                 | SELECT select_opts . select_expr_list FROM table_references opt_where opt_group_by opt_having opt_order_by opt_limit opt_into_list end
   15 select_opts: select_opts . ALL
   16            | select_opts . DISTINCT
   17            | select_opts . DISTINCTROW
   18            | select_opts . STRAIGHT_JOIN
   19            | select_opts . SQL_SMALL_RESULT
   20            | select_opts . SQL_BIG_RESULT
   21            | select_opts . SQL_BUFFER_RESULT
   22            | select_opts . SQL_NO_CHACHE
   23            | select_opts . SQL_CALC_FOUND_ROWS

    '*'                   shift, and go to state 20
    ALL                   shift, and go to state 21
    DISTINCT              shift, and go to state 22
    DISTINCTROW           shift, and go to state 23
    STRAIGHT_JOIN         shift, and go to state 24
    SQL_NO_CHACHE         shift, and go to state 25
    SQL_CALC_FOUND_ROWS   shift, and go to state 26
    SQL_SMALL_RESULT      shift, and go to state 27
    SQL_BIG_RESULT        shift, and go to state 28
    SQL_BUFFER_RESULT     shift, and go to state 29
    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    select_expr_list  转到状态 37
    select_expr       转到状态 38
    where_condition   转到状态 39


State 13

  116 insert_exp: INSERT INTO . NAME '(' key_value_exp ')' VALUES '(' value_key_exp ')'
  117           | INSERT INTO . NAME VALUES '(' value_key_exp ')'

    NAME  shift, and go to state 40


State 14

  115 update_exp: UPDATE NAME . SET NAME EQ NAME WHERE NAME EQ NAME

    SET  shift, and go to state 41


State 15

  114 create_exp: CREATE DATABASE . NAME

    NAME  shift, and go to state 42


State 16

    0 $accept: SQLS $end .

    $default  接受


State 17

    2 SQLS: SQLS SQL . ';'

    ';'  shift, and go to state 43


State 18

    1 SQLS: SQL ';' .

    $default  reduce using rule 1 (SQLS)


State 19

    9 select_exp: select_exp UNION . select_expr_stmt
   10           | select_exp UNION . ALL select_expr_stmt

    ALL     shift, and go to state 44
    SELECT  shift, and go to state 1

    select_expr_stmt  转到状态 45


State 20

   26 select_expr_list: '*' .

    $default  reduce using rule 26 (select_expr_list)


State 21

   15 select_opts: select_opts ALL .

    $default  reduce using rule 15 (select_opts)


State 22

   16 select_opts: select_opts DISTINCT .

    $default  reduce using rule 16 (select_opts)


State 23

   17 select_opts: select_opts DISTINCTROW .

    $default  reduce using rule 17 (select_opts)


State 24

   18 select_opts: select_opts STRAIGHT_JOIN .

    $default  reduce using rule 18 (select_opts)


State 25

   22 select_opts: select_opts SQL_NO_CHACHE .

    $default  reduce using rule 22 (select_opts)


State 26

   23 select_opts: select_opts SQL_CALC_FOUND_ROWS .

    $default  reduce using rule 23 (select_opts)


State 27

   19 select_opts: select_opts SQL_SMALL_RESULT .

    $default  reduce using rule 19 (select_opts)


State 28

   20 select_opts: select_opts SQL_BIG_RESULT .

    $default  reduce using rule 20 (select_opts)


State 29

   21 select_opts: select_opts SQL_BUFFER_RESULT .

    $default  reduce using rule 21 (select_opts)


State 30

   88 where_condition: SYSTEM_CALL_VARIABLE .

    $default  reduce using rule 88 (where_condition)


State 31

   89 where_condition: USER_CALL_VARIABLE .

    $default  reduce using rule 89 (where_condition)


State 32

   79 where_condition: EXISTS . '(' select_exp ')'

    '('  shift, and go to state 46


State 33

   80 where_condition: NAME .
   81                | NAME . '.' '*'
   83                | NAME . '.' NAME
   90                | NAME . '(' val_list ')'

    '.'  shift, and go to state 47
    '('  shift, and go to state 48

    $default  reduce using rule 80 (where_condition)


State 34

   82 where_condition: NUM .

    $default  reduce using rule 82 (where_condition)


State 35

   84 where_condition: CASE . case_when_fun END

    WHEN  shift, and go to state 49
    ELSE  shift, and go to state 50

    case_when_fun  转到状态 51
    when_then      转到状态 52


State 36

   78 where_condition: '(' . where_condition ')'
   87                | '(' . select_exp ')'

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    SELECT                shift, and go to state 1
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    select_exp        转到状态 53
    select_expr_stmt  转到状态 8
    where_condition   转到状态 54


State 37

   11 select_expr_stmt: SELECT select_opts select_expr_list . end
   12                 | SELECT select_opts select_expr_list . FROM table_references opt_where opt_group_by opt_having opt_order_by opt_limit opt_into_list end
   25 select_expr_list: select_expr_list . ',' select_expr

    FROM  shift, and go to state 55
    ','   shift, and go to state 56

    $default  reduce using rule 13 (end)

    end  转到状态 57


State 38

   24 select_expr_list: select_expr .

    $default  reduce using rule 24 (select_expr_list)


State 39

   27 select_expr: where_condition . opt_as_alias
   67 where_condition: where_condition . EQ where_condition
   68                | where_condition . AND where_condition
   69                | where_condition . OR where_condition
   70                | where_condition . '-' where_condition
   71                | where_condition . '+' where_condition
   72                | where_condition . '*' where_condition
   73                | where_condition . '/' where_condition
   74                | where_condition . IN '(' select_exp ')'
   75                | where_condition . NOT IN '(' select_exp ')'
   76                | where_condition . IN '(' val_list ')'
   77                | where_condition . NOT IN '(' val_list ')'
   85                | where_condition . LIKE NAME
   86                | where_condition . NOT LIKE NAME

    EQ    shift, and go to state 58
    AND   shift, and go to state 59
    OR    shift, and go to state 60
    IN    shift, and go to state 61
    NOT   shift, and go to state 62
    LIKE  shift, and go to state 63
    '*'   shift, and go to state 64
    '-'   shift, and go to state 65
    '/'   shift, and go to state 66
    '+'   shift, and go to state 67
    AS    shift, and go to state 68
    NAME  shift, and go to state 69

    $default  reduce using rule 30 (opt_as_alias)

    opt_as_alias  转到状态 70


State 40

  116 insert_exp: INSERT INTO NAME . '(' key_value_exp ')' VALUES '(' value_key_exp ')'
  117           | INSERT INTO NAME . VALUES '(' value_key_exp ')'

    VALUES  shift, and go to state 71
    '('     shift, and go to state 72


State 41

  115 update_exp: UPDATE NAME SET . NAME EQ NAME WHERE NAME EQ NAME

    NAME  shift, and go to state 73


State 42

  114 create_exp: CREATE DATABASE NAME .

    $default  reduce using rule 114 (create_exp)


State 43

    2 SQLS: SQLS SQL ';' .

    $default  reduce using rule 2 (SQLS)


State 44

   10 select_exp: select_exp UNION ALL . select_expr_stmt

    SELECT  shift, and go to state 1

    select_expr_stmt  转到状态 74


State 45

    9 select_exp: select_exp UNION select_expr_stmt .

    $default  reduce using rule 9 (select_exp)


State 46

   79 where_condition: EXISTS '(' . select_exp ')'

    SELECT  shift, and go to state 1

    select_exp        转到状态 75
    select_expr_stmt  转到状态 8


State 47

   81 where_condition: NAME '.' . '*'
   83                | NAME '.' . NAME

    '*'   shift, and go to state 76
    NAME  shift, and go to state 77


State 48

   90 where_condition: NAME '(' . val_list ')'

    '*'                   shift, and go to state 78
    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 79
    val_list         转到状态 80


State 49

   33 when_then: WHEN . where_condition THEN where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 81


State 50

   34 when_then: ELSE . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 82


State 51

   32 case_when_fun: case_when_fun . when_then
   84 where_condition: CASE case_when_fun . END

    WHEN  shift, and go to state 49
    END   shift, and go to state 83
    ELSE  shift, and go to state 50

    when_then  转到状态 84


State 52

   31 case_when_fun: when_then .

    $default  reduce using rule 31 (case_when_fun)


State 53

    9 select_exp: select_exp . UNION select_expr_stmt
   10           | select_exp . UNION ALL select_expr_stmt
   87 where_condition: '(' select_exp . ')'

    UNION  shift, and go to state 19
    ')'    shift, and go to state 85


State 54

   67 where_condition: where_condition . EQ where_condition
   68                | where_condition . AND where_condition
   69                | where_condition . OR where_condition
   70                | where_condition . '-' where_condition
   71                | where_condition . '+' where_condition
   72                | where_condition . '*' where_condition
   73                | where_condition . '/' where_condition
   74                | where_condition . IN '(' select_exp ')'
   75                | where_condition . NOT IN '(' select_exp ')'
   76                | where_condition . IN '(' val_list ')'
   77                | where_condition . NOT IN '(' val_list ')'
   78                | '(' where_condition . ')'
   85                | where_condition . LIKE NAME
   86                | where_condition . NOT LIKE NAME

    EQ    shift, and go to state 58
    AND   shift, and go to state 59
    OR    shift, and go to state 60
    IN    shift, and go to state 61
    NOT   shift, and go to state 62
    LIKE  shift, and go to state 63
    '*'   shift, and go to state 64
    '-'   shift, and go to state 65
    '/'   shift, and go to state 66
    '+'   shift, and go to state 67
    ')'   shift, and go to state 86


State 55

   12 select_expr_stmt: SELECT select_opts select_expr_list FROM . table_references opt_where opt_group_by opt_having opt_order_by opt_limit opt_into_list end

    NAME  shift, and go to state 87
    '('   shift, and go to state 88

    table_references  转到状态 89
    table_reference   转到状态 90
    table_factor      转到状态 91
    table_subquery    转到状态 92
    join_table        转到状态 93


State 56

   25 select_expr_list: select_expr_list ',' . select_expr

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    select_expr      转到状态 94
    where_condition  转到状态 39


State 57

   11 select_expr_stmt: SELECT select_opts select_expr_list end .

    $default  reduce using rule 11 (select_expr_stmt)


State 58

   67 where_condition: where_condition EQ . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 95


State 59

   68 where_condition: where_condition AND . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 96


State 60

   69 where_condition: where_condition OR . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 97


State 61

   74 where_condition: where_condition IN . '(' select_exp ')'
   76                | where_condition IN . '(' val_list ')'

    '('  shift, and go to state 98


State 62

   75 where_condition: where_condition NOT . IN '(' select_exp ')'
   77                | where_condition NOT . IN '(' val_list ')'
   86                | where_condition NOT . LIKE NAME

    IN    shift, and go to state 99
    LIKE  shift, and go to state 100


State 63

   85 where_condition: where_condition LIKE . NAME

    NAME  shift, and go to state 101


State 64

   72 where_condition: where_condition '*' . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 102


State 65

   70 where_condition: where_condition '-' . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 103


State 66

   73 where_condition: where_condition '/' . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 104


State 67

   71 where_condition: where_condition '+' . where_condition

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 33
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 36

    where_condition  转到状态 105


State 68

   28 opt_as_alias: AS . NAME

    NAME  shift, and go to state 106


State 69

   29 opt_as_alias: NAME .

    $default  reduce using rule 29 (opt_as_alias)


State 70

   27 select_expr: where_condition opt_as_alias .

    $default  reduce using rule 27 (select_expr)


State 71

  117 insert_exp: INSERT INTO NAME VALUES . '(' value_key_exp ')'

    '('  shift, and go to state 107


State 72

  116 insert_exp: INSERT INTO NAME '(' . key_value_exp ')' VALUES '(' value_key_exp ')'

    NAME  shift, and go to state 108

    key_value_exp  转到状态 109
    id_comma_exp   转到状态 110


State 73

  115 update_exp: UPDATE NAME SET NAME . EQ NAME WHERE NAME EQ NAME

    EQ  shift, and go to state 111


State 74

   10 select_exp: select_exp UNION ALL select_expr_stmt .

    $default  reduce using rule 10 (select_exp)


State 75

    9 select_exp: select_exp . UNION select_expr_stmt
   10           | select_exp . UNION ALL select_expr_stmt
   79 where_condition: EXISTS '(' select_exp . ')'

    UNION  shift, and go to state 19
    ')'    shift, and go to state 112


State 76

   81 where_condition: NAME '.' '*' .

    $default  reduce using rule 81 (where_condition)


State 77

   83 where_condition: NAME '.' NAME .

    $default  reduce using rule 83 (where_condition)


State 78

   93 val_list: '*' .

    $default  reduce using rule 93 (val_list)


State 79

   67 where_condition: where_condition . EQ where_condition
   68                | where_condition . AND where_condition
   69                | where_condition . OR where_condition
   70                | where_condition . '-' where_condition
   71                | where_condition . '+' where_condition
   72                | where_condition . '*' where_condition
   73                | where_condition . '/' where_condition
   74                | where_condition . IN '(' select_exp ')'
   75                | where_condition . NOT IN '(' select_exp ')'
   76                | where_condition . IN '(' val_list ')'
   77                | where_condition . NOT IN '(' val_list ')'
   85                | where_condition . LIKE NAME
   86                | where_condition . NOT LIKE NAME
   91 val_list: where_condition .

    EQ    shift, and go to state 58
    AND   shift, and go to state 59
    OR    shift, and go to state 60
    IN    shift, and go to state 61
    NOT   shift, and go to state 62
    LIKE  shift, and go to state 63
    '*'   shift, and go to state 64
    '-'   shift, and go to state 65
    '/'   shift, and go to state 66
    '+'   shift, and go to state 67

    $default  reduce using rule 91 (val_list)


State 80

   90 where_condition: NAME '(' val_list . ')'
   92 val_list: val_list . ',' where_condition

    ','  shift, and go to state 113
    ')'  shift, and go to state 114


State 81

   33 when_then: WHEN where_condition . THEN where_condition
   67 where_condition: where_condition . EQ where_condition
   68                | where_condition . AND where_condition
   69                | where_condition . OR where_condition
   70                | where_condition . '-' where_condition
   71                | where_condition . '+' where_condition
   72                | where_condition . '*' where_condition
   73                | where_condition . '/' where_condition
   74                | where_condition . IN '(' select_exp ')'
   75                | where_condition . NOT IN '(' select_exp ')'
   76                | where_condition . IN '(' val_list ')'
   77                | where_condition . NOT IN '(' val_list ')'
   85                | where_condition . LIKE NAME
   86                | where_condition . NOT LIKE NAME

    EQ    shift, and go to state 58
    AND   shift, and go to state 59
    OR    shift, and go to state 60
    IN    shift, and go to state 61
    NOT   shift, and go to state 62
    LIKE  shift, and go to state 63
    '*'   shift, and go to state 64
    '-'   shift, and go to state 65
    '/'   shift, and go to state 66
    '+'   shift, and go to state 67
    THEN  shift, and go to state 115


State 82

   34 when_then: ELSE where_condition .
   67 where_condition: where_condition . EQ where_condition
   68                | where_condition . AND where_condition
   69                | where_condition . OR where_condition
   70                | where_condition . '-' where_condition
   71                | where_condition . '+' where_condition
   72                | where_condition . '*' where_condition
   73                | where_condition . '/' where_condition
   74                | where_condition . IN '(' select_exp ')'
   75                | where_condition . NOT IN '(' select_exp ')'
   76                | where_condition . IN '(' val_list ')'
   77                | where_condition . NOT IN '(' val_list ')'
   85                | where_condition . LIKE NAME
   86                | where_condition . NOT LIKE NAME

    EQ    shift, and go to state 58
    AND   shift, and go to state 59
    OR    shift, and go to state 60
    IN    shift, and go to state 61
    NOT   shift, and go to state 62
    LIKE  shift, and go to state 63
    '*'   shift, and go to state 64
    '-'   shift, and go to state 65
    '/'   shift, and go to state 66
    '+'   shift, and go to state 67

    $default  reduce using rule 34 (when_then)


State 83

   84 where_condition: CASE case_when_fun END .

    $default  reduce using rule 84 (where_condition)


State 84

   32 case_when_fun: case_when_fun when_then .

    $default  reduce using rule 32 (case_when_fun)


State 85

   87 where_condition: '(' select_exp ')' .

    $default  reduce using rule 87 (where_condition)


State 86

   78 where_condition: '(' where_condition ')' .

    $default  reduce using rule 78 (where_condition)


State 87

   39 table_factor: NAME . opt_as_alias index_hint
   40             | NAME . '.' NAME opt_as_alias index_hint

    '.'   shift, and go to state 116
    AS    shift, and go to state 68
    NAME  shift, and go to state 69

    $default  reduce using rule 30 (opt_as_alias)

    opt_as_alias  转到状态 117


State 88

   42 table_factor: '(' . table_references ')'
   43             | '(' . where_condition ')' opt_as_alias index_hint
   44 table_subquery: '(' . select_exp ')'

    SYSTEM_CALL_VARIABLE  shift, and go to state 30
    USER_CALL_VARIABLE    shift, and go to state 31
    SELECT                shift, and go to state 1
    EXISTS                shift, and go to state 32
    NAME                  shift, and go to state 118
    NUM                   shift, and go to state 34
    CASE                  shift, and go to state 35
    '('                   shift, and go to state 119

    select_exp        转到状态 120
    select_expr_stmt  转到状态 8
    table_references  转到状态 121
    table_reference   转到状态 90
    table_factor      转到状态 91
    table_subquery    转到状态 92
    join_table        转到状态 93
    where_condition   转到状态 122


State 89
